# satnogs-monitor

./: .build.yml  .gitmodules  Cargo.toml  Cross.toml  Dockerfile  README.md
.github/workflows/: docker-build.yml  multiarch-build.yml
monitor/: CHANGELOG.md  Cargo.toml  build.rs
monitor/examples/: config.toml
monitor/src/: event.rs  job.rs  logger.rs  main.rs  observation.rs  rotctld_client.rs  satnogs.rs  settings.rs  state.rs  station.rs  sysinfo.rs  theme.rs  ui.rs  vessel.rs  waterfall.rs
monitor/src/widgets/: info_bar.rs  mod.rs  viridis.rs  waterfall.rs
net/: Cargo.toml
net/examples/: client.rs  master.rs
net/src/: lib.rs
node/: Cargo.toml
satnogs-db-client/: Cargo.toml
satnogs-network-client/: Cargo.toml
satnogs-network-client/examples/: future_obs.rs  observations.rs
satnogs-network-client/src/: client.rs  demoddata.rs  jobs.rs  lib.rs  observations.rs  stations.rs
