[package]
name = "satnogs-monitor"
version = "0.4.3"
authors = ["Sebastian Woetzel <wose@zuendmasse.de>"]
edition = "2018"
license = "GPL-3.0"
description = "SatNOGS Monitor is a terminal ui to monitor your and/or other ground stations of the SatNOGS network."

[dependencies]
byteorder = "1.4.3"
chrono = "0.4.11"
circular-queue = "0.2.6"
clap = { version = "4.5.53", features = ["derive"] }
config = "0.11.0"
crossbeam-channel = "0.5.5"
directories = "4.0.1"
anyhow = "1.0.0"
gpredict = { git = "https://github.com/wose/rust-gpredict.git" }
lazy_static = "1.4.0"
log = { version = "0.4.17", features = ["std"] }
notify = "5.0.0-pre.2"
regex = "1.3.9"
satnogs-network-client = { path = "../satnogs-network-client" }
serde = "1.0.138"
serde_derive = "1.0.138"
signal-hook = "0.3.14"
systemstat = "0.1.11"
termion = "1.5.6"
hifitime = "3.2.0"
tui = { git = "https://github.com/wose/tui-rs.git" , features = ["termion"]}
unicode-width = "0.1.9"
itertools-num = "0.1.3"

[build-dependencies]
pkg-config = "0.3"
cmake = "0.1"

[package.metadata.deb]
depends = "libglib2.0-0"
