[package]
name = "satnogs-network-client"
version = "0.1.0"
authors = ["Sebastian Woetzel <wose@zuendmasse.de>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.10", features = ["serde", "rustc-serialize"] }
restson = "0.5.4"
serde = "1.0.103"
serde_derive = "1.0.103"

[dev-dependencies]
mockito = "0.22.0"
