[package]
name = "satnogs-network-client"
version = "0.2.2"
authors = ["Sebastian Woetzel <wose@zuendmasse.de>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.19", features = ["serde", "rustc-serialize"] }
restson = "1.3.0"
serde = "1.0.138"
serde_derive = "1.0.138"
parse_link_header = "0.3"